Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13332

mariabackup from 10.2.x crashes with --ftwrl-* options

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2.7, 10.2.8
    • 10.2.8
    • Backup

    Description

      Unfortunately mariabackup from current GitHub code of 10.2 crashes in the same way as xtrabackup 2.4.7 (see https://bugs.launchpad.net/percona-xtrabackup/+bug/1704636) while backing up MariaDB 10.2.x data.

      This does not let backup to complete successfully when there are no long running queries, but NOT block everything with FTWRL waiting when they are present.

      Test case is simple, just run the following with 10.2.7+ started with all/almost all default:

      openxs@ao756:~/dbs/maria10.2$ rm -rf /home/openxs/backup/*
      openxs@ao756:~/dbs/maria10.2$ ls /home/openxs/backup
      openxs@ao756:~/dbs/maria10.2$ bin/mariabackup --no-defaults --host=127.0.0.1 --port=3308 --datadir=/home/openxs/dbs/maria10.2/data --user=root --backup --compress --ftwrl-wait-timeout=5 --ftwrl-wait-threshold=300 --ftwrl-wait-query-type=all --target-dir=/home/openxs/backup
      170716 15:36:16 Connecting to MySQL server host: 127.0.0.1, user: root, password: not set, port: 3308, socket: not set
      Using server version 10.2.8-MariaDB-log
      bin/mariabackup based on MariaDB server 10.2.8-MariaDB Linux (x86_64)
      xtrabackup: uses posix_fadvise().
      xtrabackup: cd to /home/openxs/dbs/maria10.2/data/
      xtrabackup: open files limit requested 0, set to 1024
      xtrabackup: using the following InnoDB configuration:
      xtrabackup:   innodb_data_home_dir = .
      xtrabackup:   innodb_data_file_path = ibdata1:12M:autoextend
      xtrabackup:   innodb_log_group_home_dir = ./
      2017-07-16 15:36:16 140640590980992 [Note] InnoDB: Number of pools: 1
      170716 15:36:16 >> log scanned up to (298878873)
      xtrabackup: Generating a list of tablespaces
      2017-07-16 15:36:16 140640590980992 [Warning] InnoDB: Allocated tablespace ID 1 for mysql/innodb_table_stats, old maximum was 0
      170716 15:36:16 [01] Compressing ./ibdata1 to /home/openxs/backup/ibdata1.qp
      170716 15:36:17 [01]        ...done
      170716 15:36:17 [01] Compressing ./mysql/innodb_table_stats.ibd to /home/openxs/backup/mysql/innodb_table_stats.ibd.qp
      170716 15:36:17 [01]        ...done
      170716 15:36:17 [01] Compressing ./mysql/innodb_index_stats.ibd to /home/openxs/backup/mysql/innodb_index_stats.ibd.qp
      170716 15:36:17 [01]        ...done
      170716 15:36:17 [01] Compressing ./mysql/gtid_slave_pos.ibd to /home/openxs/backup/mysql/gtid_slave_pos.ibd.qp
      170716 15:36:17 [01]        ...done
      170716 15:36:17 [01] Compressing ./test/sbtest1.ibd to /home/openxs/backup/test/sbtest1.ibd.qp
      170716 15:36:17 >> log scanned up to (298878873)
      170716 15:36:26 [01]        ...done
      170716 15:36:26 [01] Compressing ./test/tt1.ibd to /home/openxs/backup/test/tt1.ibd.qp
      170716 15:36:26 [01]        ...done
      170716 15:36:26 [01] Compressing ./test/task.ibd to /home/openxs/backup/test/task.ibd.qp
      170716 15:36:26 [01]        ...done
      170716 15:36:26 [01] Compressing ./test/incident.ibd to /home/openxs/backup/test/incident.ibd.qp
      170716 15:36:26 [01]        ...done
      170716 15:36:26 [01] Compressing ./test/tt2.ibd to /home/openxs/backup/test/tt2.ibd.qp
      170716 15:36:26 [01]        ...done
      170716 15:36:26 [01] Compressing ./test/t1i.ibd to /home/openxs/backup/test/t1i.ibd.qp
      170716 15:36:26 [01]        ...done
      170716 15:36:26 [01] Compressing ./test/t.ibd to /home/openxs/backup/test/t.ibd.qp
      170716 15:36:26 [01]        ...done
      170716 15:36:26 [01] Compressing ./test/bd.ibd to /home/openxs/backup/test/bd.ibd.qp
      170716 15:36:26 [01]        ...done
      170716 15:36:26 [01] Compressing ./test/tt.ibd to /home/openxs/backup/test/tt.ibd.qp
      170716 15:36:26 [01]        ...done
      170716 15:36:26 Waiting 5 seconds for queries running longer than 300 seconds to finish
      170716 15:36:26 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed,
      something is definitely wrong and this may fail.
       
      Server version: 10.2.8-MariaDB
      key_buffer_size=0
      read_buffer_size=131072
      max_used_connections=0
      max_threads=1
      thread_count=0
      It is possible that mysqld could use up to
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 5383 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x0 thread_stack 0x49000
      addr2line: 'bin/mariabackup': No such file
      bin/mariabackup(my_print_stacktrace+0x29)[0x7fe970048499]
      bin/mariabackup(handle_fatal_signal+0x30d)[0x7fe96fb8724d]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x10330)[0x7fe96f092330]
      /lib/x86_64-linux-gnu/libc.so.6(+0x3d467)[0x7fe96d032467]
      bin/mariabackup(_Z11lock_tablesP8st_mysql+0xea)[0x7fe96f91e6ca]
      bin/mariabackup(_Z12backup_startv+0x80)[0x7fe96f925710]
      bin/mariabackup(+0x44fbfa)[0x7fe96f914bfa]
      bin/mariabackup(main+0x11b)[0x7fe96f8f34cb]
      /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5)[0x7fe96d016f45]
      bin/mariabackup(+0x447658)[0x7fe96f90c658]
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.
      Segmentation fault (core dumped)
      openxs@ao756:~/dbs/maria10.2$
      

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            valerii Valerii Kravchuk
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: