MDEV-13332 mariabackup from 10.2.x crashes with --ftwrl-* options

Fixed null pointer dereference in parsing "show full processlist" output
with atoi().

Some  Innodb background thread has NULL in 'Time' column,
thus  backup would crash with when atoi is applied to null pointer.